--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -12,11 +12,11 @@
 
 common: &default_settings
   # Required license key associated with your New Relic account.
-  license_key: 38faab81f068f6d2bfb305c86da60cc739dae12f
+  license_key: '<%= ENV["NEW_RELIC_LICENSE_KEY"] %>'
 
   # Your application name. Renaming here affects where data displays in New
   # Relic.  For more details, see https://docs.newrelic.com/docs/apm/new-relic-apm/maintenance/renaming-applications
-  app_name: Son_of_Cod
+  app_name: '<%= ENV["NEW_RELIC_APP_NAME"] %>'
 
   # To disable the agent regardless of other settings, uncomment the following:
   # agent_enabled: false
